--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,89 +1,42 @@
+/* Inter font family - modern font stack similar to ON.com */
 @font-face {
-    font-family: adobe-clean;
-    src: url('../fonts/adobe-clean-normal-400.woff2') format('woff2');
+    font-family: 'Inter';
+    src: url('../fonts/inter-300.woff2') format('woff2');
     font-display: swap;
     font-style: normal;
-    font-weight: 400;
-}
-
-@font-face {
-    font-family: adobe-clean;
-    src: url('../fonts/adobe-clean-italic-400.woff2') format('woff2');
-    font-display: swap;
-    font-style: italic;
-    font-weight: 400;
-}
-
-@font-face {
-    font-family: adobe-clean;
-    src: url('../fonts/adobe-clean-normal-700.woff2') format('woff2');
-    font-display: swap;
-    font-style: normal;
-    font-weight: 700;
-}
-
-@font-face {
-    font-family: adobe-clean;
-    src: url('../fonts/adobe-clean-normal-700.woff2') format('woff2');
-    font-display: swap;
-    font-style: italic;
-    font-weight: 700;
-}
-
-@font-face {
-    font-family: adobe-clean;
-    src: url('../fonts/adobe-clean-normal-700.woff2') format('woff2');
-    font-display: swap;
-    font-style: normal;
-    font-weight: 800;
-}
-
-@font-face {
-    font-family: adobe-clean;
-    src: url('../fonts/adobe-clean-normal-700.woff2') format('woff2');
-    font-display: swap;
-    font-style: normal;
-    font-weight: 900;
-}
-
-@font-face {
-    font-family: adobe-clean;
-    src: url('../fonts/adobe-clean-normal-700.woff2') format('woff2');
-    font-display: swap;
-    font-style: italic;
-    font-weight: 900;
-}
-
-@font-face {
-    font-family: adobe-clean;
-    src: url('../fonts/adobe-clean-normal-700.woff2') format('woff2');
-    font-display: swap;
-    font-style: italic;
-    font-weight: 800;
-}
-
-@font-face {
-    font-family: adobe-clean;
-    src: url('../fonts/adobe-clean-italic-400.woff2') format('woff2');
-    font-display: swap;
-    font-style: italic;
     font-weight: 300;
 }
 
 @font-face {
-    font-family: adobe-clean;
-    src: url('../fonts/adobe-clean-normal-400.woff2') format('woff2');
+    font-family: 'Inter';
+    src: url('../fonts/inter-400.woff2') format('woff2');
+    font-display: swap;
+    font-style: normal;
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: url('../fonts/inter-500.woff2') format('woff2');
     font-display: swap;
     font-style: normal;
     font-weight: 500;
 }
 
 @font-face {
-    font-family: adobe-clean-semilight;
-    src: url('../fonts/adobe-clean-normal-400.woff2') format('woff2');
+    font-family: 'Inter';
+    src: url('../fonts/inter-600.woff2') format('woff2');
     font-display: swap;
     font-style: normal;
-    font-weight: 300;
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: url('../fonts/inter-700.woff2') format('woff2');
+    font-display: swap;
+    font-style: normal;
+    font-weight: 700;
 }
 
 @font-face {
@@ -120,4 +73,9 @@
   font-display: swap;
   src: url('../fonts/roboto-regular.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* Modern font fallback for better ON.com-like typography */
+:root {
+  --modern-font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
