--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -213,7 +213,7 @@ header nav[aria-expanded='true'] .nav-hamburger-icon::after {
 
 /* Scrolling Banner styles - placed before nav-brand to fix specificity order */
 header .scrolling-banner {
-  background-color: var(--color-brand-500);
+  background-color: var(--color-neutral-900);
   color: #fff;
   height: var(--banner-height);
   display: flex;
@@ -423,7 +423,7 @@ header nav .nav-sections .default-content-wrapper > ul > li a {
 }
 
 header nav .nav-sections ul > li > a:hover {
-  color: var(--color-brand-500);
+  color: var(--color-neutral-900);
   text-decoration: none;
 }
 
@@ -434,7 +434,7 @@ header nav .nav-sections ul > li > a::after {
   left: 0;
   width: 0;
   height: 2px;
-  background-color: var(--color-brand-500);
+  background-color: var(--color-neutral-900);
   transition: width 0.3s ease;
 }
 
@@ -498,7 +498,7 @@ header nav .nav-sections ul > li > a:hover::after {
     height: 0;
     border-left: 8px solid transparent;
     border-right: 8px solid transparent;
-    border-bottom: 8px solid var(--color-neutral-500);
+    border-bottom: 8px solid var(--color-neutral-800);
   }
 
   header nav .nav-sections .default-content-wrapper > ul > li ul > li {
@@ -541,7 +541,7 @@ header nav .nav-tools {
 }
 
 header nav .nav-tools-wrapper > button {
-  color: var(--color-brand-700);
+  color: var(--color-neutral-900);
   background: transparent;
   padding: 10px;
   border: unset;
@@ -562,7 +562,7 @@ header nav .nav-tools button.nav-cart-button[data-count]::after {
   position: absolute;
   top: 0;
   right: -2px;
-  background-color: var(--color-brand-700);
+  background-color: var(--color-neutral-900);
   color: var(--color-neutral-100);
   border-radius: 50%;
   width: 1.75em;
